[gd_scene load_steps=9 format=2]

[ext_resource path="res://blobenemy.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/enemies/slimeBlue_blue.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/enemies/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/enemies/slimeBlue.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24.7097, 10.2865 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.4024, 4.24405 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28.8832, 10 )

[node name="blobenemy" type="KinematicBody2D"]
collision_layer = 2147483664
collision_mask = 51
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.238 )
shape = SubResource( 2 )

[node name="DetectFloor" type="RayCast2D" parent="."]
position = Vector2( 0, 1.311 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
position = Vector2( 7.62939e-06, -20.4144 )
collision_layer = 16
collision_mask = 2147483681

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, 11.243 )
shape = SubResource( 3 )

[node name="SideChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="SideChecker"]
position = Vector2( 0, 6.29961 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="SideChecker" to="." method="_on_SideChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
